--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_SHOPIFY_API_KEY=dec24d4b9a303a070998b011e8013bf0
-VITE_API_URL=https://41d2-118-69-219-116.ngrok-free.app/api/v1
+VITE_API_URL=https://0dca-118-69-219-116.ngrok-free.app/api/v1
 VITE_PORT=443
 VITE_DEVELOP_MODE=1
 VITE_LOCAL_HOST=localhost,content-agent-dev.promerlabs.com,192.168.6.23
